log
Fri 29 Sep 2023 01:56:55 AM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
heap.c:22:3: error: expected ‘;’ before ‘void’
   22 | }g
      |   ^
      |   ;
......
   25 | void heap_push(Heap* pq, void* data, int priority){
      | ~~~~
Compilation failed
9dbabca
Fri 29 Sep 2023 01:57:21 AM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
ca32b6a
Fri 29 Sep 2023 01:57:45 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:3: error: ‘yyy’ undeclared (first use in this function)
   23 |   yyy
      |   ^~~
heap.c:23:3: note: each undeclared identifier is reported only once for each function it appears in
heap.c:23:6: error: expected ‘;’ before ‘}’ token
   23 |   yyy
      |      ^
      |      ;
   24 | }
      | ~     
Compilation failed
7f73cf2
Fri 29 Sep 2023 02:01:32 AM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:5: error: unknown type name ‘HANDLE’
   24 |     HANDLE handle; //
      |     ^~~~~~
heap.c:31:1: error: expected ‘;’, identifier or ‘(’ before ‘void’
   31 | void heap_push(Heap* pq, void* data, int priority){
      | ^~~~
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8c0b1be
Fri 29 Sep 2023 02:01:37 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:5: error: unknown type name ‘HANDLE’
   24 |     HANDLE handle; /
      |     ^~~~~~
heap.c:24:20: error: expected specifier-qualifier-list before ‘/’ token
   24 |     HANDLE handle; /
      |                    ^
heap.c:31:1: error: expected ‘;’, identifier or ‘(’ before ‘void’
   31 | void heap_push(Heap* pq, void* data, int priority){
      | ^~~~
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9ecc920
Fri 29 Sep 2023 02:01:40 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:5: error: unknown type name ‘HANDLE’
   24 |     HANDLE handle;
      |     ^~~~~~
heap.c:31:1: error: expected ‘;’, identifier or ‘(’ before ‘void’
   31 | void heap_push(Heap* pq, void* data, int priority){
      | ^~~~
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ebefc25
Fri 29 Sep 2023 02:01:47 AM UTC: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:5: error: unknown type name ‘HANDLE’
   24 |     HANDLE handle;
      |     ^~~~~~
heap.c:30:1: error: expected ‘;’, identifier or ‘(’ before ‘void’
   30 | void heap_push(Heap* pq, void* data, int priority){
      | ^~~~
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
df15ea3
